--- a/app/public/home.html
+++ b/app/public/home.html
@@ -16,9 +16,8 @@
     <div class="container">
     
         <div class="jumbotron">
-            <h1>
-                <i aria-hidden="true"></i> Friend Finder</h1>
-            <hr>
+            <h1><i aria-hidden="true"></i> Friend Finder</h1>
+                <hr>
             <h2>Answer 10 questions to find your match! </h2>
             <br>
     
@@ -35,7 +34,7 @@
         <footer class="footer">
             <div class="container">
                 <p>
-                    <a href="/api/friends">API Friends List</a> | <a href="">GitHub Repo</a>
+                    <a href="/api/friends">API Friends List</a> | <a href="https://github.com/seanneppl/FriendFinder">GitHub Repo</a>
                 </p>
             </div>
         </footer>
