--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Friend Finder Survey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -38,7 +38,7 @@
         
         <div class="form-group">
             <label for="q1">Question 1: How salty are you?</label>
-            <select class="form-control" id="q2">
+            <select class="form-control" id="q1">
                 <option value=""></option>
                 <option value="1">1 ( Fresh )</option>
                 <option value="2">2</option>
@@ -172,10 +172,10 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title" id="modalTitle">You watched with!</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <h5 class="modal-title" id="modalTitle">You matched with!</h5>
+                            <!-- <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
-                            </button>
+                            </button> -->
                         </div>
                         <div class="modal-body">
                             <h4 id="modalName"></h4>
